# rectangle-win

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/nuxt-ui/references/layouts/: chat.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.tauri/: rectangle-win-updater.key.pub
docs/: architecture.md  development.md
docs/superpowers/plans/: 2026-07-15-application-layer.md  2026-07-15-domain-core.md  2026-07-15-frontend.md  2026-07-15-tauri-presentation.md  2026-07-15-win32-infra.md  2026-07-16-input-overlay-rewrite.md  2026-07-18-settings-redesign.md
docs/superpowers/specs/: 2026-07-15-rectangle-win-design.md  2026-07-16-input-overlay-rewrite-design.md  2026-07-18-settings-redesign-design.md
scripts/: gen-catppuccin-theme.cjs  png-to-ico.js
src/: App.vue  index.html  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: errors.rs  keyboard_service.rs  mock.rs  mod.rs  ports.rs  snap_service.rs
src-tauri/src/domain/: cursor_fsm.rs  errors.rs  geometry.rs  keyboard_chain.rs  mod.rs  model.rs  presets.rs
src-tauri/src/infrastructure/: input_dispatcher.rs  mod.rs  overlay_window.rs  toml_config.rs  win32_input.rs  win32_monitor.rs  win32_overlay.rs  win32_window.rs
src-tauri/src/presentation/: commands.rs  events.rs  mod.rs  state.rs  tray.rs
src-tauri/tests/: domain_integration.rs
src/assets/css/: _catppuccin.css  main.css
src/components/: ChainEditor.vue  ColorLockField.vue  PageHeader.vue  SaveActions.vue  SaveBar.vue  SectorMapping.vue  SectorMappingTable.vue  SettingsLayout.vue  SnapCanvas.vue  SnapProperties.vue  UHotkeyInput.vue  USection.vue
src/entities/: config.ts  default-config.ts
src/features/: api.ts  config-store.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  ko.ts
src/layouts/: SettingsLayout.vue
src/pages/: About.vue  Display.vue  General.vue  Keyboard.vue  SnapEditor.vue  Throw.vue
